--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
         <div class="container">
           <div class="results__inner">
             <div class="results__item">
-              <img class="results__item-icon" src="img/svgicons/works.svg" alt="Портфель выполненных работ" width="98" height="80">
+              <img class="results__item-icon" src="img/svgicons/works.svg" alt="Портфель выполненных работ" width="98"
+                height="80">
               <div class="results__item-text">
                 Выполненных работ
               </div>
@@ -247,7 +248,8 @@
               </div>
             </div>
             <div class="results__item">
-              <img class="results__item-icon" src="img/svgicons/clients.svg" alt="Довольные клиенты" width="92" height="80">
+              <img class="results__item-icon" src="img/svgicons/clients.svg" alt="Довольные клиенты" width="92"
+                height="80">
               <div class="results__item-text">
                 Довольных клиентов
               </div>
@@ -265,7 +267,8 @@
               </div>
             </div>
             <div class="results__item">
-              <img class="results__item-icon" src="img/svgicons/review.svg" alt="Отзывы клиентов" width="81" height="80">
+              <img class="results__item-icon" src="img/svgicons/review.svg" alt="Отзывы клиентов" width="81"
+                height="80">
               <div class="results__item-text">
                 Всего отзывов
               </div>
@@ -348,13 +351,15 @@
                   <label class="form-title" for="input-number">
                     Номер телефона
                   </label>
-                  <input class="item-input" id="input-number" name="your-number" type="tel" placeholder="+380501111111" required>
+                  <input class="item-input" id="input-number" name="your-number" type="tel" placeholder="+380501111111"
+                    required>
                 </div>
               </div>
               <label class="form-title" for="textarea-message">
                 Ваше сообщение
               </label>
-              <textarea class="form-message" id="textarea-message" name="comment" placeholder="Текст вашего сообщения" required></textarea>
+              <textarea class="form-message" id="textarea-message" name="comment" placeholder="Текст вашего сообщения"
+                required></textarea>
               <button class="form-btn" type="submit">
                 Отправить
               </button>
