--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/icons/favicon.png">
-  <link rel="stylesheet" href="files/reset.css?_v=20220322191041">
-  <link rel="stylesheet" href="css/style.min.css?_v=20220322191041">
+  <link rel="stylesheet" href="files/reset.css?_v=20220324124914">
+  <link rel="stylesheet" href="css/style.min.css?_v=20220324124914">
   <title>Портфолио Руслана Ярмоленко | Главная страница</title>
 </head>
 
@@ -173,28 +173,28 @@
 </section>
 
     <section class="works">
-  <div class="container">
+  <div class="container container--works">
     <h2 class="title title--center">
       Мои работы
     </h2>
 
     <ul class="works__inner">
-      <li class="works__li">
+      <li class="works__item">
         <button class="works__btn" type="button" data-filter="all">
           Все работы
         </button>
       </li>
-      <li class="works__li">
+      <li class="works__item">
         <button class="works__btn" type="button" data-filter=".lending">
           Лендинги
         </button>
       </li>
-      <li class="works__li">
+      <li class="works__item">
         <button class="works__btn" type="button" data-filter=".corporating">
           Корпоративные
         </button>
       </li>
-      <li class="works__li">
+      <li class="works__item">
         <button class="works__btn" type="button" data-filter=".commerce">
           E-commerce
         </button>
@@ -203,12 +203,12 @@
 
     <ul class="works__wrapper">
       <li class="mix lending works__box">
-        <a href="#" class="works__link">
+        <a href="https://a1fonco.github.io/Transport/" class="works__link">
           <picture><source srcset="img/works/project-one.webp" type="image/webp"><img class="works__img" src="img/works/project-one.jpg" width="360" height="360" alt="Работа номер 1"></picture>
         </a>
       </li>
       <li class="mix corporating works__box">
-        <a href="#" class="works__link">
+        <a href="https://a1fonco.github.io/Filter/" class="works__link">
           
           <picture><source srcset="img/works/project-two.webp" type="image/webp"><img class="works__img" src="img/works/project-two.jpg" width="360" height="360" alt="Работа номер 2"></picture>
         </a>
@@ -248,7 +248,7 @@
 </section> -->
 
     <div class="results section">
-  <div class="container">
+  <div class="container container--results">
 
     <ul class="results__inner">
       <li class="results__item results__item--works">
@@ -394,9 +394,9 @@
   </a>
 </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220322191041"></script>
-  <script src="files/mixitup.min.js?_v=20220322191041"></script>
-  <script src="js/app.min.js?_v=20220322191041"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220324124914"></script>
+  <script src="files/mixitup.min.js?_v=20220324124914"></script>
+  <script src="js/app.min.js?_v=20220324124914"></script>
 </body>
 
 </html>
