--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="img/icons/favicon.png">
-  <link rel="stylesheet" href="files/reset.css?_v=20220324124914">
-  <link rel="stylesheet" href="css/style.min.css?_v=20220324124914">
+  <link rel="stylesheet" href="files/reset.css?_v=20220328185609">
+  <link rel="stylesheet" href="css/style.min.css?_v=20220328185609">
   <title>Портфолио Руслана Ярмоленко | Главная страница</title>
 </head>
 
@@ -294,7 +294,7 @@
       <address class="contact__box">
         <p>
           Связаться со мной можно, воспользовавшись контактной формой
-          <span>(пока форма недоступна)</span>, или напрямую по номеру телефона,
+          <span>(на данный момент форма недоступна)</span>, или напрямую по номеру телефона,
           email, в соцсетях:
         </p>
         <ul class="contact__list">
@@ -312,32 +312,17 @@
 
         <ul class="social">
           <li class="social__item">
-            <a
-              class="social__link"
-              href="https://www.instagram.com/"
-              style="background-image: url(img/icons/inst.svg)"
-              target="_blank"
-            >
+            <a class="social__link" href="#" style="background-image: url(img/icons/inst.svg)" target="_blank">
               <span class="sr-only">Инстаграм</span>
             </a>
           </li>
           <li class="social__item">
-            <a
-              class="social__link"
-              href="https://vk.com/alfonco"
-              style="background-image: url(img/icons/vk.svg)"
-              target="_blank"
-            >
+            <a class="social__link" href="https://vk.com/alfonco" style="background-image: url(img/icons/vk.svg)" target="_blank">
               <span class="sr-only">Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a
-              class="social__link"
-              href="https://telegram.org/"
-              style="background-image: url(img/icons/teleg.svg)"
-              target="_blank"
-            >
+            <a class="social__link" href="https://t.me/yarm_rus" style="background-image: url(img/icons/teleg.svg)" target="_blank">
               <span class="sr-only">Телеграм</span>
             </a>
           </li>
@@ -394,9 +379,9 @@
   </a>
 </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220324124914"></script>
-  <script src="files/mixitup.min.js?_v=20220324124914"></script>
-  <script src="js/app.min.js?_v=20220324124914"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js?_v=20220328185609"></script>
+  <script src="files/mixitup.min.js?_v=20220328185609"></script>
+  <script src="js/app.min.js?_v=20220328185609"></script>
 </body>
 
 </html>
